apps/bluesky/environments/homelab/manifest.yaml
---
# Source: homelab/charts/bluesky/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.2.0
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: pds-port
  selector:
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
---
# Source: homelab/charts/bluesky/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.2.0
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bluesky
      app.kubernetes.io/instance: bluesky
  template:
    metadata:
      labels:
        helm.sh/chart: bluesky-0.2.0
        app.kubernetes.io/name: bluesky
        app.kubernetes.io/instance: bluesky
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: bluesky
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: bluesky
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/bluesky-social/pds:0.4.5037"
          imagePullPolicy: IfNotPresent
          ports:
            - name: pds-port
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /pds
              name: pvc-bluesky-pvc
              readOnly: false
      volumes:
        - name: pvc-bluesky-pvc
          persistentVolumeClaim:
            claimName: bluesky-pvc
---
# Source: homelab/charts/bluesky/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.2.0
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "bluesky.kyledev.co"
    - "bluesky.int.kyledev.co"
    - "bluesky.ts.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: bluesky
        port: 3000
        weight: 1
---
# Source: homelab/charts/bluesky/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: bluesky
  labels:
    helm.sh/chart: bluesky-0.2.0
    app.kubernetes.io/name: bluesky
    app.kubernetes.io/instance: bluesky
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: bluesky
  extAuth:
    bodyToExtAuth:
      maxRequestBytes: 65536
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: crowdsec
        port: 8080
        weight: 1
